Fix hearing list item header wrapping when 'closed' label is not present

--- a/assets/sass/hel/hearing-list.scss
+++ b/assets/sass/hel/hearing-list.scss
@@ -24,6 +24,7 @@
         padding: $line-height-computed;
     }
     &-labels {
+        @extend .clearfix;
         .label {
             margin-bottom: 12px;
         }
